Cleanup in underlay