@@ -39,9 +39,8 @@ public class TypescriptWalker extends AnnotationWalker {
       fieldNameAndType.append('?');
     }
 
-    if (field.getGenericType() instanceof ParameterizedType) {
+    if (field.getGenericType() instanceof ParameterizedType pType) {
       // This is a type-parameterized class (e.g. List, Map).
-      ParameterizedType pType = (ParameterizedType) field.getGenericType();
       String pTypeName = pType.getRawType().getTypeName();
 
       fieldNameAndType.append(": ");
@@ -84,7 +83,7 @@ public class TypescriptWalker extends AnnotationWalker {
   private String getTypeNameOrSubstitutionLink(String typeName) {
     if (annotationPath.getClassesToWalk().stream()
         .map(Class::getTypeName)
-        .collect(Collectors.toList())
+        .toList()
         .contains(typeName)) {
       return "${" + typeName + "}";
     } else {
